--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "url": "https://github.com/merencia/node-cron/issues"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "uuid": "8.3.2"
   },
   "devDependencies": {
